# docs/swagger.json
@@ -5,6 +5,37 @@
         "license": {}
     },
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "登录",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ao.LoginAo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    }
+                }
+            }
+        },
         "/bill": {
             "post": {
                 "description": "add bill",
@@ -26,37 +57,6 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/ao.AddBillAo"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok"
-                    }
-                }
-            }
-        },
-        "/user/login": {
-            "post": {
-                "description": "login",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "登录",
-                "parameters": [
-                    {
-                        "description": " ",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/ao.LoginAo"
                         }
                     }
                 ],
@@ -107,9 +107,6 @@
                     "type": "number"
                 },
                 "billDate": {
-                    "type": "string"
-                },
-                "createBy": {
                     "type": "string"
                 },
                 "description": {
